# asos-tools-py

./: .gitignore  DEPLOY.md  Dockerfile  LICENSE  MATLAB.md  README.md  app.py  asosFetch1Min.m  asosFetch1MinDemo.m  awc_faa_to_icao.json  faa-bundle.js  fix_station_prefixes.py  pyproject.toml  railway.json  requirements.txt  scan_repos.py  scan_results.json
.github/workflows/: _deploy_hf.py  deploy-hf.yml  owl-tick.yml  sbom.yml  scorecard.yml
.streamlit/: config.toml
asos_tools/: __init__.py  _missing_report.py  alerts.py  alerts_feed.py  anomaly.py  api.py  auth.py  awc.py  buoys.py  earthquakes.py  fetch.py  globe_view.py  icons.py  incident_docx.py  live_streams.py  logging_ext.py  map_view.py  metar_parse.py  metars.py  ncei.py  news.py  notams.py  nws.py  pdf_export.py  persistent_cache.py  radar.py  report.py  scheduler.py  sources.py  space_weather.py  stations.py  tropical.py  validation.py  watchlist.py  webcams.py
asos_tools/data/: aomc_stations.json  aomc_validation.json  awc_stations_index.json
deploy/: build_aomc_catalog.py  build_station_catalog.py  entrypoint.sh  hf_deploy.py  huggingface_README.md  nginx.conf  supervisord.conf
examples/: build_reports.py  fetch_last_6_months.py  plot_6_month_overview.py
tests/: test_fetch.py  test_metars_and_stations.py
tests/fixtures/: kord_20240115_1200_1500.csv
