[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asos-tools"
version = "0.1.0"
description = "Fetch, analyze, and plot NCEI ASOS surface observations by date range — Python port of dmhuehol/ASOS-Tools with 1-minute support."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "ASOS-Tools contributors" },
]
keywords = ["asos", "ncei", "noaa", "weather", "meteorology", "surface-observations", "iem"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "pandas>=2.0",
    "requests>=2.28",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
dev = ["pytest>=7", "matplotlib>=3.7"]

[project.urls]
Homepage = "https://github.com/dmhuehol/ASOS-Tools"

[tool.setuptools.packages.find]
include = ["asos_tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "live: tests that hit the real IEM endpoint (requires internet)",
]
